# chroma

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
include/: chroma.hpp
src/: Chroma.cpp  Chroma.hpp  main.cpp
test/: main.cpp
